--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "ko-KR"
 title                    : "be Bright, bright"
 title_separator          : "|"
 subtitle                 : "민혁의 개발 블로그."
-name                     : "minhyeok"
+name                     : "MinHyeok Kim"
 description              : 
 url                      : "https://xvihaan.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "慜赫"
+  name             : "MinHyeok"
   avatar           : "/assets/images/bbright.png"
   bio              : "총명하며 빛나라"
   location         : "South Korea"
